@@ -1,3 +1,4 @@
+* #2149, #2150: fixes for the clipboard palette. (tomeu)
 * #2163 Arrow icons in the intro screen buttons. (marco)
 
 Snapshot 4c352d1f83
